text overflow-fixed

--- a/src/views/home/styles.css
+++ b/src/views/home/styles.css
@@ -32,6 +32,7 @@
   width: 100%;
 }
 
+/* Mobile Screens */
 @media screen and (max-width: 730px) {
 
   .hide-on-mobile {
@@ -44,6 +45,7 @@
     margin-top: 2.5rem;
   }
   .grid_container {
+    text-overflow: ellipsis;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -56,9 +58,10 @@
   
 }
 
+/* For responsive screen ga issue */
 @media screen and (max-width: 729px) and (min-width: 698px){
   .grid_container {
-    column-gap: 1rem !important;
+    column-gap: 1rem;
   }
 }
 
